<resources>
    <string name="foco">hora de manter o foco!</string>
    <string name="lembrete">LEMBRETE</string>
    <string name="frase">Tenha orgulho das suas conquistas. Tudo o que vale a pena, leva tempo.</string>
    <string name="name_app">Pomodoro</string>
    <string name="pausa">Hora de dar uma pausa!</string>
    <string name="intervalo_de_foco">Intervalo de foco</string>
    <string name="tempo_foco_padrao">25:00</string>
    <string name="intervalo_de_descanso">Intervalo de descanso</string>
    <string name="tempo_rest_padrao">05:00</string>
    <string name="salvar">Salvar</string>
    <string name="tempo_zerado">00:00</string>
</resources>