<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bg_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_purple"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:layout_marginTop="25sp"
        android:gravity="top"
        android:text="@string/name_app"
        android:textColor="#800080"
        android:textSize="32sp"
        android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="16dp"
        android:layout_marginBottom="32dp"
        android:layout_below="@id/title_layout"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lembrete"
            android:textColor="#800080"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frase"
            android:textColor="#800080"
            android:textSize="14sp"
            android:lineSpacingExtra="4dp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/progress_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <ProgressBar
            android:id="@+id/progress_circular"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminateOnly="false"
            android:progressDrawable="@drawable/circular_progress"
            android:max="100"
            android:progress="100" />

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempo_foco_padrao"
            android:textColor="#800080"
            android:textSize="48sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:shadowColor="#800080"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2" />
    </FrameLayout>

    <TextView
        android:id="@+id/typeTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_above="@+id/buttons"
        android:text="@string/foco"
        android:textColor="#800080"
        android:textStyle="italic"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/button_reset"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:src="@drawable/rotate_right_solid"
            android:tint="@color/purple"
            />

        <ImageButton
            android:id="@+id/button_play"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/circular_background"
            android:src="@drawable/play_solid"
            android:visibility="visible"
            android:tint="@color/white" />

        <ImageButton
            android:id="@+id/button_pause"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/circular_background"
            android:src="@drawable/pause_solid"
            android:visibility="gone"
            android:tint="@color/white" />

        <ImageButton
            android:id="@+id/button_settings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:src="@drawable/gear_solid"
            android:tint="@color/purple"
            />

    </LinearLayout>
</RelativeLayout>
